// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Client console.log clientLogLevel is silent 1`] = `
Array [
  "Hey.",
]
`;

exports[`Client console.log hot disabled 1`] = `
Array [
  "Hey.",
  "[WDS] Live Reloading enabled.",
]
`;

exports[`Client console.log hot enabled 1`] = `
Array [
  "Hey.",
  "[HMR] Waiting for update signal from WDS...",
  "[WDS] Hot Module Replacement enabled.",
  "[WDS] Live Reloading enabled.",
]
`;

exports[`Client console.log liveReload disabled 1`] = `
Array [
  "Hey.",
]
`;

exports[`Client console.log liveReload enabled 1`] = `
Array [
  "Hey.",
  "[WDS] Live Reloading enabled.",
]
`;
